fix: whitespace removed

--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,10 @@
 @import url(./blocks/register/register.css);
 @import url(./blocks/login/login.css);
 @import url(./blocks/infotooltip/infotooltip.css);
+
+html,
+body {
+  background-color: #000;
+  height: 100%;
+  min-height: 100%;
+}
